More cleanup, intermediate, pending more tests